# delivery-calendar

./: .gitignore  Dockerfile  README.org  amazon_orders.py  cronjob  delivery_calendar.py  delivery_tracker.py  parsers.py  pyproject.toml
scrapers/: __init__.py  amazon.py  base.py  bookswagon.py  ikea.py
tests/: test_amazon_orders.py  test_ikea_scraper.py  test_parsers.py
